[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
maudit = { version = "0.10.0" }
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.228" }
serde_json = { version = "1.0.149" }
rand = "0.9.2"
schemars = { version = "1.2.0", features = ["chrono04"] }

[profile.profiling]
inherits = "release"
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
debug = 0
strip = "debuginfo"
