[workspace]
members = ["crates/*", "xtask"]
resolver = "3"

[workspace.dependencies]
maudit = { version = "0.11.1" }
maud = { version = "0.27.0" }
serde = { version = "1.0.228" }
serde_json = { version = "1.0.149" }
rand = "0.9.2"

[profile.profiling]
inherits = "release"
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
debug = 0
strip = "debuginfo"
