[package]
name = "florist-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
lambda_http = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
maud = "*"
serde_qs = "0.13.0"
strum = "0.26"
strum_macros = "0.26"
sublime_fuzzy = "0.7.0"
paginate = "1.1.11"
tokio = { version = "1", features = ["macros"] }
serde_json = "1.0.121"
form_urlencoded = "1.2.1"
base64 = "0.22.1"
cookie = "0.18.1"
sha2 = "0.10.8"
chrono = "0.4.38"
slug = "0.1.5"
reqwest = { version = "0.12.5", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }
http = "1.1.0"
