[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "3", features = ["json"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
gray_matter = "0.2"
glob = "0.3"
dotenvy = "0.15"
rayon = "1.10"
chrono = { version = "0.4.44", features = ["serde"] }
