[package]
name = "add"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
maud = "*"
serde_json = "1.0.121"
form_urlencoded = "1.2.1"
base64 = "0.22.1"
cookie = "0.18.1"
sha2 = "0.10.8"
chrono = "0.4.38"
slug = "0.1.5"
reqwest = { version = "0.12.5", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }
aws_lambda_events = "0.15.1"
http = "1.1.0"
lambda_runtime = "0.13.0"
tokio = "1.41.1"
log = "0.4.22"
simple_logger = "5.0.0"
