[package]
name = "catalogue"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
maud = "*"
serde_qs = "0.13.0"
strum = "0.26"
strum_macros = "0.26"
sublime_fuzzy = "0.7.0"
paginate = "1.1.11"
aws_lambda_events = "0.15.1"
http = "1.1.0"
lambda_runtime = "0.13.0"
tokio = "1.41.1"
log = "0.4.22"
simple_logger = "5.0.0"
