[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = {version = "1.48.0", features = ["rt-multi-thread"]}
erikaflorist = { path = "../website" }
maud.workspace = true
tower-http = { version = "0.6.6", features = ["fs"] }
maudit = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }
dotenvy = "0.15.7"
