[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
worker = "0.7.4"
worker-macros = { version = "0.7.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
sha2 = "0.10"
console_error_panic_hook = "0.1"
urlencoding = "2.1"

[lib]
crate-type = ["cdylib", "rlib"]
