[package]
name = "erikaflorist"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
maudit = { version = "0.6.5" }
chrono = { version = "0.4.41", features = ["serde"] }
maud = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
