[package]
name = "erikaflorist"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
maudit = { workspace = true }
chrono = { version = "0.4.42", features = ["serde"] }
maud = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
xml-builder = "0.5.4"
lol_html = "2.7.0"
