[package]
name = "erikaflorist"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
maudit = { workspace = true }
chrono = { version = "0.4.44", features = ["serde"] }
maud = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
xml-builder = "0.6.0"
lol_html = "2.9.0"
graphgarden-core = "0.2.0"
